  - Defined operations and properties are now removed then their constraints are removed as well.

* A bug in the ModelRegistry was fixed.
  - Adding of Models should now handle NullPointerExceptions correctly.
 
* A bug in the UML2 Meta-Model was fixed.
  - If the top-level package is a UML model or profile directory, 
    these packages are now adapted correctly.

* Some bugs in the basis model instance elements were fixed.
  - Illegal arguments are now handled appropriately.
  - JavaModelInstanceCollections can now be initialized with null 
    values even if they are of the type Set or OrderedSet.

* Some bugs in the Ecore ModelInstance Type were fixed.
  - Empty model instances now get a created default name.
  - Illegal arguments are now handled appropriately.
  - Types are now resolved, even if their package name is not modeled completely
    in the Model.

* Some bugs in the Java ModelInstance Type were fixed.
  - Empty model instances now get a created default name.
  - Illegal arguments are now handled appropriately.
  - The copy mechanism for @pre values works now correctly when invoking
    empty constructors.
  
* Complete rewrite of the OCL Standard Library; some bugs were fixed.
  - invalid and null values are now created by every library method and no exceptions are thrown
  - consistent way of handling null(undefined) and invalid
  - undefined can be created for AnyType
  - TypeConstants: create BagType, etc. instead of CollectionType -> invalid and undefined collections can be created
  - OclBoolean: and(), or() and implies() accept undefined values and can return OclBooleans (standard, p. 15)
  - union(OclSequence) only on OclSequence instead of SortedCollection
  - excluding(T) now removes all appearances, not only the first
  - OclCollections can return their generic/element type
  - support for the creation of nested OclCollections
  - OclAny: oclIsUndefined() now returns invalid if the object is invalid