@@ -8,8 +8,12 @@ Require-Bundle: org.eclipse.core.runtime;bundle-version="3.4.0",
  org.junit4;bundle-version="4.0.0",
  tudresden.ocl20.pivot.pivotmodel;bundle-version="2.1.0",
  tudresden.ocl20.pivot.metamodels.test;bundle-version="2.1.0",
- tudresden.ocl20.pivot.metamodels.java;bundle-version="2.1.0"
+ tudresden.ocl20.pivot.metamodels.java;bundle-version="2.1.0",
+ tudresden.ocl20.pivot.facade;bundle-version="2.1.0",
+ tudresden.ocl20.pivot.modelbus;bundle-version="2.1.0"
 Bundle-ActivationPolicy: lazy
 Bundle-RequiredExecutionEnvironment: J2SE-1.5
 Export-Package: package1.package2
 Bundle-Vendor: TU Dresden, Software Technology Group
+Bundle-ClassPath: lib/simple.jar,
+ .
